# integration-avaintegration_metapackage

./: Dockerfile  EXAMPLE_USAGE.txt  LICENSE  PUBLISH_GUIDE.md  README.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  build.sh  pyproject.toml  setup.py
.github/docker/: Dockerfile
.github/workflows/: publish-pypi-and-docker.yml
django_integration_metapackage/: __init__.py
