[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-integration-metapackage"
version = "1.0.0"
description = "Meta pacote Python para o ecossistema de Integração AVA (Integrador, Painel e Gestor)"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "CTE ZL IFRN", email = "cte.zl@ifrn.edu.br"}
]
keywords = ["django", "metapackage", "integration", "ava"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
]

dependencies = [
    "Django==5.2.10",
    "django-rule-engine==1.0.1",
    "django-dsgovbr==5.2.3",
    "django-better-choices==1.18",
    "jsonschema==4.26.0",
    "rule-engine==4.5.3",
    "requests==2.32.5",
    "django-valkey==0.4.0",
    "django-simple-history==3.11.0",
    "whitenoise==6.11.0",
    "django-import-export==4.4.0",
    "django-json-widget==2.1.1",
    "django-admin-autocomplete-filter==0.7.1",
    "django-richtextfield==1.6.2",
    "psycopg[binary,pool]==3.3.2",
]

[project.urls]
Homepage = "https://github.com/cte-zl-ifrn/python-integration_metapackage"
Repository = "https://github.com/cte-zl-ifrn/python-integration_metapackage"
Issues = "https://github.com/cte-zl-ifrn/python-integration_metapackage/issues"

[tool.setuptools]
packages = ["django_integration_metapackage"]
